--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>Stay Safe</title>
+    <title>Know Where You Go</title>
   </head>
   <body>
     <div id="root"></div>
