--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         });
       }
     </script>
+    <script type="module">
+      import { Buffer } from "buffer"
+   
+     window.global = window
+     window.Buffer = Buffer
+   </script>
     <title>Know Where You Go</title>
   </head>
   <body>
