hide automatic track option

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
     </script>
 
-    <title>Know Where You Go</title>
+    <title>Track your activities</title>
   </head>
   <body>
     <div id="root"></div>
